# lumaterm

./: .gitignore  Makefile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_cache.rs  git_watcher.rs  lib.rs  main.rs  pty_manager.rs
src/addons/: agents.ts  containers.ts  git.ts  index.ts  system.ts
src/components/: AgentsPanel.tsx  BrowserPanel.tsx  DockerPanel.tsx  EmptySession.tsx  GitPanel.tsx  InfoPanel.tsx  PaneContextMenu.tsx  ResizeHandle.tsx  Settings.tsx  SideMenu.tsx  SplitContainer.tsx  SplitDivider.tsx  TerminalPane.tsx  TerminalStatusBar.tsx
src/hooks/: use-pty.ts
src/lib/: addons.ts  keybindings.ts  split-tree.ts  theme.ts
src/state/: store.ts
src/types/: index.ts
