[package]
name = "lumaterm"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "lumaterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
notify = "7"
notify-debouncer-mini = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
